# Rob_Prac

./: .gitignore  QTquick.py  README.md  button.py  generate_csvs.py  generate_targets.py  helloworld.py  main.qml  output.txt  panels.py  pyproject.toml  requirements.txt  run.py  scratch.py  scratch_targets.py  stanford.py  test_abb.py  test_abb2.py  test_abb3.py  test_ik2.py  test_scara.py  test_visualization.py
backend/: config.py  cv_hand_controller.py  dh_kinematics.py  filter.py  kinematics.py  logger.py  meshes.py  parser.py  recording.py  replay_buffer.py  replay_controller.py  replay_io.py  replay_worker.py  robot_presets.py  sensor_contract.py  serial_test.py  serial_worker.py  sim_worker.py  trajectory.py
backend/tests/: __init__.py  test_filter.py  test_parser.py  test_replay_io.py  test_sensor_contract.py
docs/: MVP_SOFTWARE_PARALLEL_SPEC.md  project_overview_part1.md  project_overview_part2.md  test_checklist_software.md
firmware/: README.md  mpu6050_test.ino
firmware/esp32_mpu6050_json/: esp32_mpu6050_json.ino
frontend/: app.py  main_window.py
frontend/panels/: __init__.py  accordion_section.py  analysis_dashboard.py  arm_canvas.py  connection_panel.py  custom_combo_box.py  cv_hand_panel.py  data_panel.py  ee_map_panel.py  joint_card.py  (+9 more)
logs/: robosim.log.1  robosim.log.2  robosim.log.3  robosim.log.4  robosim.log.5
scratch/: check_irb120.py  check_reaches.py  inspect_window.py  test_conn.py  test_serial_integration.py
trajectories/: 2_DOF_Planar.csv  ABB_IRB_120.csv  PUMA_560.csv  SCARA.csv  Standard_3_DOF.csv  Stanford_Arm.csv  UR5.csv
